--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Laravel Package Tutorial",
     "short_name": "LPT",
-    "start_url": "https://polished-star-8157.fly.dev/",
+    "start_url": "/",
     "background_color": "#6777ef",
     "description": "Tutorial of Laravel Package",
     "display": "fullscreen",
