--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-svelte": "^0.8.0",
-        "sweetalert2": "^11.4.8"
+        "sweetalert2": "^11.4.8",
+        "vercel": "^30.2.2"
     }
 }
