--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,7 +7,7 @@
 
     RewriteCond %{HTTPS} !=on
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
@@ -34,7 +34,7 @@ Deny from all
 </Files>
 
 server {
-    listen 80;
+    force_https = true
     server_name example-app-production.up.railway.app;
     return 301 https://$host$request_uri;
 }
