--- a/nginx.conf
+++ b/nginx.conf
@@ -22,14 +22,14 @@ http {
     server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
     server {
-        listen ${PORT};
+        listen ${PORT}
         listen [::]:${PORT};
         server_name localhost;
 
         $if(NIXPACKS_PHP_ROOT_DIR) (
             root ${NIXPACKS_PHP_ROOT_DIR};
         ) else (
-            root /;
+            root /public;
         )
      
         add_header X-Frame-Options "SAMEORIGIN";
@@ -39,14 +39,14 @@ http {
      
         charset utf-8;
      
-        $if(IS_LARAVEL) (
+        
             location / {
                 try_files $uri $uri/ /index.php?$query_string;
             }
-        ) else ()
+  
      
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location = /robots.txt  { access_log off; log_not_found off; }
+        location = /favicon.ico { access_log off log_not_found off }
+        location = /robots.txt  { access_log off log_not_found off }
      
         $if(IS_LARAVEL) (
             error_page 404 /index.php;
