--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ events {
 }
 
 http {
-   
+    include    $!{nginx}/conf/mime.types;
     index    index.html index.htm index.php;
 
     default_type application/octet-stream;
@@ -22,7 +22,7 @@ http {
     server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
     server {
-        listen ${PORT}
+        listen ${PORT};
         listen [::]:${PORT};
         server_name localhost;
 
