--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,17 @@
-server {
+worker_processes auto;
+daemon off;
+
+events {
+  worker_connections  1024;
+}
+
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
+  sendfile      on;
+  keepalive_timeout  65;
+
+  server {
     listen 80;
     listen [::]:80;
     server_name example-app-production.up.railway.app;
@@ -29,4 +42,5 @@ server {
     location ~ /\.(?!well-known).* {
         deny all;
     }
+  }
 }
