--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     listen 80;
     listen [::]:80;
     server_name example-app-production.up.railway.app;
-    root /example-app-production.up.railway.app/public;
+    root example-app-production.up.railway.app/public;
  
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
