--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
   keepalive_timeout  65;
 
   server {
-    listen 80;
+    listen ${PORT};
     listen [::]:80;
     server_name example-app-production.up.railway.app;
     root example-app-production.up.railway.app/public;
