--- a/nginx.conf
+++ b/nginx.conf
@@ -12,10 +12,10 @@ http {
   keepalive_timeout  65;
 
   server {
-    listen ${PORT};
+    listen 80;
     listen [::]:80;
     server_name example-app-production.up.railway.app;
-    root example-app-production.up.railway.app/public;
+    root /public;
  
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
