--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name localhost;
+        server_name example-app-production.up.railway.app/;
 
         
         root /app;
