--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
         server_name example-app-production.up.railway.app/;
 
         
-        root /app;
+        root /public;
         
      
         add_header X-Frame-Options "SAMEORIGIN";
