--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
       
      
         location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             
         }
