--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@inertiajs/svelte": "^1.0.3",
         "@sveltejs/vite-plugin-svelte": "^2.2.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-basic-ssl": "^1.0.1",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
